--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,22 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    margin: 0;
+    padding: 0;
+    background-color: #111;
+    box-sizing: border-box;
+    color: #f3f3f3;
+}
+
+a {
+    text-decoration: none;
+}
+
+
+figure img {
+    max-width: 100%;
+}
+
+figure {
+    max-width: 100%;
+    margin: .5em 0;
+}
