feat: add post content

--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,5 +1,5 @@
 <figure>
     <img src="{{ photoCover }}" alt="{{photoAlt}}">
 </figure>
-<h2>{{ cardTitle }}</h2>
+<h2><a [routerLink]="['content', id]">{{ cardTitle }}</a></h2>
 <p>{{cardDescription}}</p>
