--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,10 +1,10 @@
 <section class="blog-body">
     <article class="big-card">
-    <app-big-card photoCover="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEj_DDBRXybNsEP_MQP80I_g8BvLE18JRalKJxfhB9Sxmmveyr6X4BvWxTQfwzgbS62kLv1E84G4hiU9ZoNVoCPbehrAhcSgwKYbC3aMgUatR3ll6qG8VbdKVN6HOCYy_pEiK1qn57GCXG3Mx__f2TmjuNc9-xD3G9bB8nGXtzWZWYragA/s1600/0411%20-%20Osrevni.bmp" photoAlt="Imagem Osrevni" cardTitle="Lorem Ipsum Dinâmico" cardDescription="Essa descrição é dinâmica linda maravilhosa!"></app-big-card>
+    <app-big-card id="1" photoCover="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEj_DDBRXybNsEP_MQP80I_g8BvLE18JRalKJxfhB9Sxmmveyr6X4BvWxTQfwzgbS62kLv1E84G4hiU9ZoNVoCPbehrAhcSgwKYbC3aMgUatR3ll6qG8VbdKVN6HOCYy_pEiK1qn57GCXG3Mx__f2TmjuNc9-xD3G9bB8nGXtzWZWYragA/s1600/0411%20-%20Osrevni.bmp" photoAlt="Imagem Osrevni" cardTitle="Lorem Ipsum Dinâmico" cardDescription="Essa descrição é dinâmica linda maravilhosa!"></app-big-card>
 </article>
 <div class="small-cards-container">
-    <app-small-card photoCover="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEirOZOxI-OPE48dn8ugHfrItVTG6sGZNS8zYwx6Xsoe5yfSOnfSNec2-0kMS-HYcwIaS0a8B5rON4_DCS4zvaLwnoxot_S0KGmKlB66L-FZHFdRwPQS7uN7eVGrOkgJcze2w1yFiOGfAIeNA2-uN3bDMNYYOZzBUFIeq9wW_xGIBagW72k/s1600/050618%20-%20Hotarubi%20no%20Mori%20e.png" photoAlt="Gin de Hotarubi no Mori e" cardTitle="Meu anime favorito"></app-small-card>
-    <app-small-card photoCover="AAA" photoAlt="BBB" cardTitle="Pequeno1"></app-small-card>
-    <app-small-card photoCover="AAA" photoAlt="BBB" cardTitle="Pequeno1"></app-small-card>
+    <app-small-card id="2" photoCover="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEirOZOxI-OPE48dn8ugHfrItVTG6sGZNS8zYwx6Xsoe5yfSOnfSNec2-0kMS-HYcwIaS0a8B5rON4_DCS4zvaLwnoxot_S0KGmKlB66L-FZHFdRwPQS7uN7eVGrOkgJcze2w1yFiOGfAIeNA2-uN3bDMNYYOZzBUFIeq9wW_xGIBagW72k/s1600/050618%20-%20Hotarubi%20no%20Mori%20e.png" photoAlt="Gin de Hotarubi no Mori e" cardTitle="Meu anime favorito"></app-small-card>
+    <app-small-card id="3" photoCover="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhG8EXiqbQ4M6chnIruJBpGV_acZRIV78TDcds-PbNueaPQmv8c5CnEi1YJrmVGFE9mxjsJGGlmWaW88SIPutBabUJu32Ms3lQOkpl072OuHhmdKi2U5YPpLRop6m4y3hsSZln8bNlFZIRyr743J_9kcN4a3ZoJbrVAdqZgZJc2Hx4sJA/s1600/Ik%C3%A9men%20Revolution%20-%20Love%20and%20Magic%20in%20Wonderland%20Menu.png" photoAlt="Ikémen Kakumei" cardTitle="Ikémen Kakumei"></app-small-card>
+    <app-small-card id="4" photoCover="https://raw.githubusercontent.com/catppuccin/catppuccin/main/assets/logos/exports/1544x1544_circle.png" photoAlt="Logo Catppuccin" cardTitle="Tema Catppuccin"></app-small-card>
 </div>
 </section>
