--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-menu-bar></app-menu-bar>
 <app-blog-title></app-blog-title>
-<app-home></app-home>
+<router-outlet></router-outlet>
 <footer>Feito com amor pela Beatriz</footer>
