--- a/src/app/components/small-card/small-card.component.css
+++ b/src/app/components/small-card/small-card.component.css
@@ -2,3 +2,13 @@ article {
     display: grid;
     grid-template-columns: 30% 70%;
 }
+
+img {
+    width: 300px;
+    height: 100px;
+    object-fit: cover;
+}
+
+h2 {
+    margin-left: .7em
+}
