--- a/src/styles.css
+++ b/src/styles.css
@@ -2,15 +2,20 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: #111;
+    background-color: #24273a;
     box-sizing: border-box;
-    color: #f3f3f3;
+    color: #cad3f5;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
 
 a {
     text-decoration: none;
 }
 
+h2 a {
+    color: #ed8796;
+    font-size: 1.2em;
+}
 
 figure img {
     max-width: 100%;
@@ -19,4 +24,12 @@ figure img {
 figure {
     max-width: 100%;
     margin: .5em 0;
+}
+
+footer {
+    margin-top: 1em;
+    text-align: center;
+    background: #363a4f;
+    color: #939ab7;
+    padding: 1em;
 }
